--- a/app/database/BUILD.bazel
+++ b/app/database/BUILD.bazel
@@ -1,7 +1,6 @@
 load("@io_bazel_rules_go//go:def.bzl", "go_library")
 load("@io_bazel_rules_docker//go:image.bzl", "go_image")
-load("@io_bazel_rules_docker//container:container.bzl", "container_image")
-load("@io_bazel_rules_docker//container:container.bzl", "container_push")
+load("@io_bazel_rules_docker//container:container.bzl",  "container_push")
 
 go_library(
     name = "database_lib",
@@ -10,7 +9,7 @@ go_library(
     visibility = ["//visibility:private"],
     deps = [
         "//app/commons",
-        "//app/protos:databasepb",
+        "//protos:databasepb_go_proto",
         "@com_github_go_sql_driver_mysql//:mysql",
         "@com_github_rs_zerolog//log",
         "@org_golang_google_grpc//:go_default_library",
