--- a/kubernetes/secrets.encrypted.yaml
+++ b/kubernetes/secrets.encrypted.yaml
@@ -19,6 +19,8 @@ data:
     PASSWORDEXCHANGE_HCAPTCHA_SITEKEY: ENC[AES256_GCM,data:efO/OZrpcapA9LGHHlxdAKoGJL72B1n3gqNwIXCd+HNKnfN6Ei/ZVnn4sEQn3Kim,iv:NmN0caFkOISrZ2RsLnOd1/9w+EhlPpFb/D9XbHgUoXQ=,tag:GmzcgFsqeVcWrA9UdLdmPQ==,type:str]
     DELETEMESSAGES_PASS: ENC[AES256_GCM,data:AaWmz7ZrdgNMs765e3G/V4E7LXyeTubu,iv:XzCLEMPInrpfxkaRyWYLQqkmwGS78xjh45HmQSS42IY=,tag:3hWr/0QbY2ISrMt2RbbVKA==,type:str]
     DELETEMESSAGES_USER: ENC[AES256_GCM,data:ZsMaMmidGdzClXI+6YpL5Ttn+cI=,iv:u20k7MaNqDxAz2r0dBaYyfHP0oX3rmDcIHw6Llk+axQ=,tag:/ebDMpMYzh6hB5XQhUHMyg==,type:str]
+    SLACK_SIGNING_SECRET: ENC[AES256_GCM,data:SYIF+J98BW+W8KbF8wo2fXXVmNZkEzkWRJ2WjnB3Sa/Kldp2fIt0yk4U04w=,iv:NVTAX85qs9Dgh7b2VLPfKxUX7Trx2HzN8g398zDo658=,tag:cU2Ley2b5aPh8lm3m7OT4g==,type:str]
+    SLACK_BOT_TOKEN: ENC[AES256_GCM,data:OhzD0E7Tkom2FtZRsKuYHFsJ1xaSH1b6fNcosv6D8JlDFWAB0uED2W0KQ6PTRrT8l+pw9R9Hk1WMPZh0uemPNbBdl+oJCe/AFTMfjA==,iv:zgErg6oSGm7EX6RUBJkNvXbydC0RSINDPw+BdZVuMvk=,tag:g4gc6O1bBx3HNIOaWep21w==,type:str]
 sops:
     kms:
         - arn: arn:aws:kms:us-west-2:842805395457:key/e5e35884-80f1-4e88-801a-6210686a54a3
@@ -29,8 +31,8 @@ sops:
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2022-03-10T14:28:39Z"
-    mac: ENC[AES256_GCM,data:sYTwerbBLXxEliHpX4LPA4he7YJj7EFyRR+3lKGkPr5x6oI/NgSnwt2KKoD5A4YOx0OqmuGAGIBHapXSnsFc0dy+LtAIIxA0SRYmGSQWNN/sw/8Hl9ECXp2avQAVUxJUS8ua/XngtKmo1GaRrF1z+amuI6XOJrK6H2hiNnsrE/k=,iv:JxI2P78Y9wrhW+/BjCx8/xtEZaXfbe06U5f2eAf0ENo=,tag:Qo59mBm5ktY5cJxZr9s7dQ==,type:str]
+    lastmodified: "2022-03-21T02:06:30Z"
+    mac: ENC[AES256_GCM,data:QlrzQ+WJijH4qjk0fjYP7Wqnx9Z8op74uWscjZu3v7qGns8epi9nbMRkGrlTILJsCRw/wN4/EwS+Ql4FrIv+HcHf5yob6EtMV9DQMRQIT9HXz6+1pyY/3U/vDQh30HAA18RqcM01KsBuUaWUq+n33+ouH0jOBF7RIalBktiDoEc=,iv:HoaYMuWl+cJiGvlH+NylB1BXbM9gqdRKx+b0JQPn2EQ=,tag:QFLocsdm6SjTzG9hzIiSUQ==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.1
