--- a/slackbot/requirements.txt
+++ b/slackbot/requirements.txt
@@ -1,5 +1,7 @@
+beautifulsoup4==4.10.0
 click==8.0.4
 Flask==2.0.3
+google==3.0.0
 grpcio==1.44.0
 grpcio-tools==1.44.0
 itsdangerous==2.1.0
@@ -9,4 +11,5 @@ protobuf==3.19.4
 six==1.16.0
 slack-bolt==1.11.6
 slack-sdk==3.15.2
+soupsieve==2.3.1
 Werkzeug==2.0.3
