--- a/kubernetes/database.deployment.yaml
+++ b/kubernetes/database.deployment.yaml
@@ -15,6 +15,8 @@ spec:
       annotations:
         iam.amazonaws.com/role: arn:aws:iam::842805395457:role/Test_ec2ForSDK
         linkerd.io/inject: enabled
+        # Have to disable outbound ports since it's outside of cluster: https://linkerd.io/2.11/reference/proxy-configuration/
+        config.linkerd.io/skip-outbound-ports: "3306"
       labels:
         app: database
         name: database
@@ -35,14 +37,4 @@ spec:
           name: php-config
       imagePullSecrets:
       - name: regcred
-      volumes:
-      - emptyDir: {}
-        name: php-socket
-      - emptyDir: {}
-        name: html
-      - emptyDir: {}
-        name: nginx-config
-      - emptyDir: {}
-        name: php-config
----
 
