--- a/app/encryption/BUILD.bazel
+++ b/app/encryption/BUILD.bazel
@@ -12,7 +12,7 @@ go_library(
         "@com_github_rs_xid//:xid",
         "@com_github_rs_zerolog//log",
         "@org_golang_google_grpc//:go_default_library",
-        "@org_golang_google_grpc_reflection//:reflection",
+        "@org_golang_google_grpc//reflection",
     ],
 )
 
