--- a/kubernetes/secrets.encrypted.yaml
+++ b/kubernetes/secrets.encrypted.yaml
@@ -17,10 +17,15 @@ data:
     PASSWORDEXCHANGE_DBPORT: ENC[AES256_GCM,data:+PXw7x78gdo=,iv:6JGXPgOYnTluAYci+sraD5XegretsFmR5vqqQQbwec0=,tag:m4kjgsly0PabF/6lsCKCaw==,type:str]
     PASSWORDEXCHANGE_HCAPTCHA_SECRET: ENC[AES256_GCM,data:WDuygJkmvt361wIo/fIXZZ7cTJsFqCH5g92tZHDCz30h8h6btu1tze6s0TGAJpjkSJzi7PpM92o=,iv:96tOvQph6daiiVtnLDHAIzYdEXEDDbs4u3rA+JgHs7Y=,tag:Cx16BwZ0o1wdl4GxCeicng==,type:str]
     PASSWORDEXCHANGE_HCAPTCHA_SITEKEY: ENC[AES256_GCM,data:efO/OZrpcapA9LGHHlxdAKoGJL72B1n3gqNwIXCd+HNKnfN6Ei/ZVnn4sEQn3Kim,iv:NmN0caFkOISrZ2RsLnOd1/9w+EhlPpFb/D9XbHgUoXQ=,tag:GmzcgFsqeVcWrA9UdLdmPQ==,type:str]
+    OAUTHDB_PASSWORD: ENC[AES256_GCM,data:lSPN2WXziBCnUoZelyIZMeKfN/ZKMyDN,iv:lDIhSPbVH2MF5giNQkBJ9dMfLJzdV7rcDFNwFPsTMAY=,tag:WMhpkn+Mhj4VVHhurgEZCg==,type:str]
+    OAUTHDB_USER: ENC[AES256_GCM,data:r9/sTZEsVfDHH2hz,iv:lS3e2+JL/8rkBI1Trzal2KUg0sDb24Zw4YbVU8IRp9I=,tag:bVHhRukiezkjxPN8qmMHvw==,type:str]
+    OAUTHDB_NAME: ENC[AES256_GCM,data:cU4HS3hXYh0=,iv:CEdM2vjSwfEp+inIRWfyOfziRm2qnuOEgatPRW5JZ4I=,tag:U+GrueRc08R49o86f11Gmw==,type:str]
     DELETEMESSAGES_PASS: ENC[AES256_GCM,data:AaWmz7ZrdgNMs765e3G/V4E7LXyeTubu,iv:XzCLEMPInrpfxkaRyWYLQqkmwGS78xjh45HmQSS42IY=,tag:3hWr/0QbY2ISrMt2RbbVKA==,type:str]
     DELETEMESSAGES_USER: ENC[AES256_GCM,data:ZsMaMmidGdzClXI+6YpL5Ttn+cI=,iv:u20k7MaNqDxAz2r0dBaYyfHP0oX3rmDcIHw6Llk+axQ=,tag:/ebDMpMYzh6hB5XQhUHMyg==,type:str]
     SLACK_SIGNING_SECRET: ENC[AES256_GCM,data:SYIF+J98BW+W8KbF8wo2fXXVmNZkEzkWRJ2WjnB3Sa/Kldp2fIt0yk4U04w=,iv:NVTAX85qs9Dgh7b2VLPfKxUX7Trx2HzN8g398zDo658=,tag:cU2Ley2b5aPh8lm3m7OT4g==,type:str]
     SLACK_BOT_TOKEN: ENC[AES256_GCM,data:OhzD0E7Tkom2FtZRsKuYHFsJ1xaSH1b6fNcosv6D8JlDFWAB0uED2W0KQ6PTRrT8l+pw9R9Hk1WMPZh0uemPNbBdl+oJCe/AFTMfjA==,iv:zgErg6oSGm7EX6RUBJkNvXbydC0RSINDPw+BdZVuMvk=,tag:g4gc6O1bBx3HNIOaWep21w==,type:str]
+    SLACK_CLIENT_ID: ENC[AES256_GCM,data:mqVmPlclrlG2AM7Bv2ffvdrCsj1OZ5I2GYwabHSkFq2qRmMC,iv:F3m0p/NUYetadI9P1h9rFYRx4e39iYmctj+i2UHWLfM=,tag:qKoHGWSvIUWCe4R4J0JS4w==,type:str]
+    SLACK_CLIENT_SECRET: ENC[AES256_GCM,data:Wao+a7eZbmFynPBIn1UHNvv4c7c62x4b68JhBgZA0H0y3Jb/ljU066S0JtI=,iv:hFQfBu0WHK+PEFMh04qfqj9tV7NNxLXjkMMtx+DIvb0=,tag:e4nm1tChIORH9/iWioVG7w==,type:str]
 sops:
     kms:
         - arn: arn:aws:kms:us-west-2:842805395457:key/e5e35884-80f1-4e88-801a-6210686a54a3
@@ -31,8 +36,8 @@ sops:
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2022-03-21T02:06:30Z"
-    mac: ENC[AES256_GCM,data:QlrzQ+WJijH4qjk0fjYP7Wqnx9Z8op74uWscjZu3v7qGns8epi9nbMRkGrlTILJsCRw/wN4/EwS+Ql4FrIv+HcHf5yob6EtMV9DQMRQIT9HXz6+1pyY/3U/vDQh30HAA18RqcM01KsBuUaWUq+n33+ouH0jOBF7RIalBktiDoEc=,iv:HoaYMuWl+cJiGvlH+NylB1BXbM9gqdRKx+b0JQPn2EQ=,tag:QFLocsdm6SjTzG9hzIiSUQ==,type:str]
+    lastmodified: "2022-04-04T01:44:22Z"
+    mac: ENC[AES256_GCM,data:OfHaTEX0wL7IYOCtZV73F2CZ7cJshadm/ngW1C5iShKhzb6KBT+6WBZqL4YrJ6fe4xa6og6lwvLFKVxe/FjBDvRIk6RpOXYS51n8JUC+yddFBkqyHhmBugi/JuDhyC3pYU4mb2wxbqenUA/2fI8GYmAEUurO22+ftvg4tMQafZs=,iv:eSacjt8REuCobC1agG19lcW7h7Q4UTWQuIoYhYyHahA=,tag:T8ojVqCXges4oId0v0vAPA==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.7.1
