--- a/kubernetes/slackbot.deployment.yaml
+++ b/kubernetes/slackbot.deployment.yaml
@@ -15,6 +15,7 @@ spec:
       annotations:
         iam.amazonaws.com/role: arn:aws:iam::842805395457:role/Test_ec2ForSDK
         linkerd.io/inject: enabled
+        config.linkerd.io/skip-outbound-ports: "3306"
       labels:
         app: slackbot
         name: slackbot
@@ -43,10 +44,40 @@ spec:
               secretKeyRef:
                 key: PASSWORDEXCHANGE_HOST
                 name: test-secret
+          - name: PASSWORDEXCHANGE_DBHOST
+            valueFrom:
+              secretKeyRef:
+                key: PASSWORDEXCHANGE_DBHOST
+                name: test-secret
+          - name: OAUTHDB_PASSWORD
+            valueFrom:
+              secretKeyRef:
+                key: OAUTHDB_PASSWORD
+                name: test-secret
+          - name: OAUTHDB_USER
+            valueFrom:
+              secretKeyRef:
+                key: OAUTHDB_USER
+                name: test-secret
+          - name: OAUTHDB_NAME
+            valueFrom:
+              secretKeyRef:
+                key: OAUTHDB_NAME
+                name: test-secret
           - name: SLACK_SIGNING_SECRET
             valueFrom:
               secretKeyRef:
                 key: SLACK_SIGNING_SECRET
+                name: test-secret    
+          - name: SLACK_CLIENT_ID
+            valueFrom:
+              secretKeyRef:
+                key: SLACK_CLIENT_ID
+                name: test-secret  
+          - name: SLACK_CLIENT_SECRET
+            valueFrom:
+              secretKeyRef:
+                key: SLACK_CLIENT_SECRET
                 name: test-secret        
         name: setup
         volumeMounts:
