--- a/slackbot/requirements.txt
+++ b/slackbot/requirements.txt
@@ -2,14 +2,20 @@ beautifulsoup4==4.10.0
 click==8.0.4
 Flask==2.0.3
 google==3.0.0
+greenlet==1.1.2
 grpcio==1.44.0
 grpcio-tools==1.44.0
+gunicorn==20.1.0
 itsdangerous==2.1.0
 Jinja2==3.0.3
+mariadb==1.0.10
 MarkupSafe==2.1.0
+mysqlclient==2.1.0
 protobuf==3.19.4
+psycopg2==2.9.3
 six==1.16.0
 slack-bolt==1.11.6
 slack-sdk==3.15.2
 soupsieve==2.3.1
+SQLAlchemy==1.4.34
 Werkzeug==2.0.3
