--- a/.github/workflows/bazel-build.yml
+++ b/.github/workflows/bazel-build.yml
@@ -25,7 +25,9 @@ jobs:
       # Checks-out your repository under $GITHUB_WORKSPACE, which is the CWD for
       # the rest of the steps
       - uses: actions/checkout@v2
-
+      #install neccessary tools under $GITHUB_WORKSPACE
+      - name: Install tools
+      - run: sudo apt update && sudo apt install -y libmariadb-dev
       # build
       - name: get bazel version
         run: bazel version
