--- a/app/encryption/BUILD.bazel
+++ b/app/encryption/BUILD.bazel
@@ -1,6 +1,5 @@
 load("@io_bazel_rules_go//go:def.bzl", "go_library")
 load("@io_bazel_rules_docker//go:image.bzl", "go_image")
-load("@io_bazel_rules_docker//container:container.bzl", "container_image")
 load("@io_bazel_rules_docker//container:container.bzl", "container_push")
 
 go_library(
@@ -9,7 +8,7 @@ go_library(
     importpath = "github.com/Anthony-Bible/password-exchange/app/encryption",
     visibility = ["//visibility:private"],
     deps = [
-        "//app/protos:encryptionpb",
+        "//protos:encryptionpb_go_proto",
         "@com_github_rs_xid//:xid",
         "@com_github_rs_zerolog//log",
         "@org_golang_google_grpc//:go_default_library",
