add ability to deploy  all deployments

--- a/kubernetes/BUILD
+++ b/kubernetes/BUILD
@@ -1,4 +1,5 @@
 load("@io_bazel_rules_k8s//k8s:object.bzl", "k8s_object")
+load("@io_bazel_rules_k8s//k8s:objects.bzl", "k8s_objects")
 
 k8s_object(
     name = "password",
@@ -58,4 +59,16 @@ k8s_object(
     kind = "deployment",
     # A template of a Kubernetes Deployment object yaml.
     template = ":slackbot.deployment.yaml",
+)
+
+
+##CREATE ALL deployments
+k8s_objects(
+    name = "deployments",
+    objects = [
+        ":password",
+        ":slackbot",
+        ":encryption",
+        ":database",
+    ]
 )
