--- a/slackbot/requirements.txt
+++ b/slackbot/requirements.txt
@@ -6,6 +6,7 @@ greenlet==1.1.2
 grpcio==1.44.0
 grpcio-tools==1.44.0
 gunicorn==20.1.0
+importlib-metadata==4.11.3
 itsdangerous==2.1.2
 Jinja2==3.1.1
 mariadb==1.0.10
@@ -19,3 +20,4 @@ slack-sdk==3.15.2
 soupsieve==2.3.1
 SQLAlchemy==1.4.34
 Werkzeug==2.0.3
+zipp==3.8.0
