make build directory

--- a/.github/workflows/bazel-build.yml
+++ b/.github/workflows/bazel-build.yml
@@ -57,6 +57,7 @@ jobs:
           skaffold build --file-output=./images.json
       - name: skaffold rendering
         run: | 
+          mkdir /build
           echo "rendering k8s manifests"
           skaffold render --output=/build/password-exchange.yaml --offline=true
 
