--- a/.github/workflows/bazel-build.yml
+++ b/.github/workflows/bazel-build.yml
@@ -61,4 +61,10 @@ jobs:
           echo "rendering k8s manifests"
           skaffold render --output=$HOME/build/password-exchange.yaml --offline=true
 
+      - name: Release
+        uses: softprops/action-gh-release@v1
+        if: startsWith(github.ref, 'refs/tags/')
+        with:
+          files: |
+            $HOME/build/password-exchange.yaml
 
