--- a/.github/workflows/bazel-build.yml
+++ b/.github/workflows/bazel-build.yml
@@ -59,12 +59,12 @@ jobs:
         run: | 
           mkdir $HOME/build
           echo "rendering k8s manifests"
-          skaffold render --output=$HOME/build/password-exchange.yaml --offline=true
+          skaffold render --output="$HOME"/build/password-exchange.yaml --offline=true
 
       - name: Release
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
         with:
           files: |
-            $HOME/build/password-exchange.yaml
+            "$HOME"/build/password-exchange.yaml
 
