add some css for tooltips and clean up kubernetes yaml

--- a/app/templates/BUILD
+++ b/app/templates/BUILD
@@ -11,6 +11,7 @@ pkg_tar(
     name = "tarred_file",
     srcs = [":template_files"],
     extension = "tgz",
+    strip_prefix = ".",
     mode = "0o644",
     package_dir = "/templates",
     visibility = ["//visibility:public"],
