--- a/k8s/password-exchange.deployment.yaml
+++ b/k8s/password-exchange.deployment.yaml
@@ -13,7 +13,6 @@ spec:
   template:
     metadata:
       annotations:
-        iam.amazonaws.com/role: arn:aws:iam::842805395457:role/Test_ec2ForSDK
         linkerd.io/inject: enabled
       labels:
         app: passwordexchange
@@ -25,25 +24,7 @@ spec:
         - secretRef:
             name: test-secret
         image: ghcr.io/anthony-bible/passwordexchange-container-prod
-        name: setup
-        volumeMounts:
-        - mountPath: /code
-          name: html
-        - mountPath: /nginx
-          name: nginx-config
-        - mountPath: /php
-          name: php-config
-      imagePullSecrets:
-      - name: regcred
-      volumes:
-      - emptyDir: {}
-        name: php-socket
-      - emptyDir: {}
-        name: html
-      - emptyDir: {}
-        name: nginx-config
-      - emptyDir: {}
-        name: php-config
----
+        name: password-exchange
+
 
 
