--- a/.github/workflows/bazel-build.yml
+++ b/.github/workflows/bazel-build.yml
@@ -33,7 +33,7 @@ jobs:
       - uses: actions/checkout@v3
       #install neccessary tools under $GITHUB_WORKSPACE
       - name: Install tools
-        run: sudo apt update && sudo apt install -y libmariadb-dev python3.8-dev && sudo apt purge -y python2.7*
+        run: sudo apt update && sudo apt install -y libmariadb-dev 
       - name: Install Skaffold
         run: |
           curl -Lo skaffold https://storage.googleapis.com/skaffold/releases/v1.38.0/skaffold-linux-amd64 && \
