add stamping to bazel builds

--- a/k8s/database.deployment.yaml
+++ b/k8s/database.deployment.yaml
@@ -19,7 +19,8 @@ spec:
       labels:
         app: database
         name: database
-        phase: prod
+        phase: "%{PHASE}"
+        version: "%{VERSION}" 
     spec:
       containers:
       - envFrom:
