--- a/k8s/encryption.service.yaml
+++ b/k8s/encryption.service.yaml
@@ -9,7 +9,7 @@ spec:
   selector:
     app: encryption 
   ports:
-    - name: http
+    - name: grpc 
       port: 50051 
       targetPort: 50051
 
