--- a/k8s/password-exchange.deployment.yaml
+++ b/k8s/password-exchange.deployment.yaml
@@ -3,6 +3,7 @@ kind: Deployment
 metadata:
   labels:
     app: passwordexchange
+    #todo: add version label
   name: passwordexchange-deployment
   namespace: default
 spec:
@@ -17,7 +18,8 @@ spec:
       labels:
         app: passwordexchange
         name: passwordexchange
-        phase: prod
+        phase: "%{PHASE}"
+        version: "%{VERSION}" 
     spec:
       containers:
       - envFrom:
