--- a/.github/workflows/bazel-build.yml
+++ b/.github/workflows/bazel-build.yml
@@ -31,11 +31,7 @@ jobs:
       #install neccessary tools under $GITHUB_WORKSPACE
       - name: Install tools
         run: sudo apt update && sudo apt install -y libmariadb-dev &&  sudo apt purge -y python2.7*
-      - name: Install Skaffold
-        run: |
-          curl -Lo skaffold https://storage.googleapis.com/skaffold/releases/v1.38.0/skaffold-linux-amd64 && \
-          sudo install skaffold /usr/local/bin/
-          skaffold version
+
 
       # build
       - name: get bazel version
@@ -44,19 +40,14 @@ jobs:
           python --version
           python3.8 -m venv .venv
           source .venv/bin/activate 
-      # - name: Build the code
-      #   run: bazel build //... 
-      - name: skaffold Build
-        run: |
-          source .venv/bin/activate 
-          echo "Building with skaffold"
-          python --version
-          skaffold build --file-output=./images.json
-      - name: skaffold rendering
+      - name: Build the code
+        run: bazel build //... --stamp --workspace_status_command=./tools/bazel_stamp_vars.sh 
+      - name: Render manifests
+        if: startsWith(github.ref, 'refs/tags/')
         run: | 
           mkdir build
           echo "rendering k8s manifests"
-          skaffold render --output=./build/password-exchange.yaml --offline=true
+          bazel run //k8s:deployments-and-services --stamp --workspace_status_command=./tools/bazel_stamp_vars.sh > ./build/password-exchange.yaml 
 
       - name: Release
         uses: softprops/action-gh-release@v1
