--- a/k8s/slackbot.deployment.yaml
+++ b/k8s/slackbot.deployment.yaml
@@ -19,7 +19,8 @@ spec:
       labels:
         app: slackbot
         name: slackbot
-        phase: prod
+        phase: "%{PHASE}"
+        version: "%{VERSION}" 
     spec:
       containers:
       - image: ghcr.io/anthony-bible/passwordexchange-slackbot
