- removed installing python-dev in dockerfile - CLARIFIED readme and moved to  pure bazel (skaffold doesn't allow templating) - add check to form to combat spam and change general layout of form - update python dependencies - add version label to slackbot

--- a/k8s/password-exchange.deployment.yaml
+++ b/k8s/password-exchange.deployment.yaml
@@ -27,6 +27,9 @@ spec:
             name: test-secret
         image: ghcr.io/anthony-bible/passwordexchange-container-prod
         name: password-exchange
+        ports:
+        - containerPort: 8080
+
 
 
 
