--- a/.github/workflows/bazel-build.yml
+++ b/.github/workflows/bazel-build.yml
@@ -37,12 +37,13 @@ jobs:
       # build
       - name: get bazel version
         run: |
+          ls -lah
           bazel version
           python --version
           python3.8 -m venv .venv
           source .venv/bin/activate 
       - name: Build the code
-        run: bazel build //... --stamp --workspace_status_command=./tools/bazel_stamp_vars.sh 
+        run: bazel build //... 
       - name: Render manifests
         if: startsWith(github.ref, 'refs/tags/')
         run: | 
