make sure to use cache on  bazel build too

--- a/.github/workflows/bazel-build.yml
+++ b/.github/workflows/bazel-build.yml
@@ -33,7 +33,10 @@ jobs:
         run: sudo apt update && sudo apt install -y libmariadb-dev &&  sudo apt purge -y python2.7*
 
       - name: generate bazelrc
-        run: /bin/bash -c 'echo "run --stamp --workspace_status_command=./tools/bazel_stamp_vars.sh --remote_cache=https://$BAZEL_USER:$BAZEL_PASS@cache.anthony.bible" >> .bazelrc'
+        run: |
+          /bin/bash -c 'echo "run --stamp --workspace_status_command=./tools/bazel_stamp_vars.sh --remote_cache=https://$BAZEL_USER:$BAZEL_PASS@cache.anthony.bible" >> .bazelrc'
+          /bin/bash -c 'echo "build --stamp --workspace_status_command=./tools/bazel_stamp_vars.sh --remote_cache=https://$BAZEL_USER:$BAZEL_PASS@cache.anthony.bible" >> .bazelrc'
+
       # build
       - name: get bazel version
         run: |
