remove some debugging from github workflow

--- a/.github/workflows/bazel-build.yml
+++ b/.github/workflows/bazel-build.yml
@@ -42,11 +42,10 @@ jobs:
       # build
       - name: get bazel version
         run: |
-          ls -lah
           bazel version
           python --version
           python3.8 -m venv .venv
-          source .venv/bin/activate 
+          source .venv/bin/activate  # this in theory shouldn't be needed
       - name: Build the code
         run: bazel build //... 
       - name: Render manifests
