--- a/.github/workflows/bazel-build.yml
+++ b/.github/workflows/bazel-build.yml
@@ -52,6 +52,6 @@ jobs:
       - name: Push changes
         uses: ad-m/github-push-action@master
         with:
-          repository: "https://github.com/Anthony-Bible/password-exchange-deploy.git"
+          repository: "Anthony-Bible/password-exchange-deploy"
           directory: ./build
 
