add seperate bazel build for dev

--- a/k8s/BUILD
+++ b/k8s/BUILD
@@ -32,6 +32,19 @@ k8s_object(
     # A template of a Kubernetes Deployment object yaml.
     template = ":password-exchange.service.yaml",
 )
+k8s_object(
+    name = "password-dev-service",
+    cluster = "cluster.local",
+
+    # An optional collection of docker_build images to publish
+    # when this target is bazel run.  The digest of the published
+    # image is substituted as a part of the resolution process.
+
+    kind = "service",
+
+    # A template of a Kubernetes Deployment object yaml.
+    template = ":password-exchange-dev.service.yaml",
+)
 
 k8s_object(
     name = "encryption",
@@ -64,6 +77,19 @@ k8s_object(
     template = ":encryption.service.yaml",
 )
 k8s_object(
+    name = "encryption-dev-service",
+    cluster = "cluster.local",
+    
+    # An optional collection of docker_build images to publish
+    # when this target is bazel run.  The digest of the published
+    # image is substituted as a part of the resolution process.
+
+    kind = "service",
+
+    # A template of a Kubernetes Deployment object yaml.
+    template = ":encryption-dev.service.yaml",
+)
+k8s_object(
     name = "database",
     cluster = "cluster.local",
 
@@ -94,6 +120,19 @@ k8s_object(
 
     # A template of a Kubernetes Deployment object yaml.
     template = ":database.service.yaml",
+)
+k8s_object(
+    name = "database-dev-service",
+    cluster = "cluster.local",
+
+    # An optional collection of docker_build images to publish
+    # when this target is bazel run.  The digest of the published
+    # image is substituted as a part of the resolution process.
+
+    kind = "service",
+
+    # A template of a Kubernetes Deployment object yaml.
+    template = ":database-dev.service.yaml",
 )
 k8s_object(
     name = "slackbot",
@@ -147,10 +186,29 @@ k8s_objects(
         ":database",
     ]
 )
+
+k8s_objects(
+    name = "dev-services",
+    objects = [
+        ":password-dev-service",
+        ":slackbot-service",
+        ":encryption-dev-service",
+        ":database-dev-service",
+    ]
+)
+
 k8s_objects(
     name = "deployments-and-services",
     objects = [
         ":deployments",
         ":services",
+    ]
+)
+
+k8s_objects(
+    name = "dev-deployments-and-services",
+    objects = [
+        ":deployments",
+        ":dev-services",
     ]
 )
