add phase to deployment-name

--- a/k8s/database.deployment.yaml
+++ b/k8s/database.deployment.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   labels:
     app: database
-  name: database-deployment
+  name: database-%{PHASE}-deployment
   namespace: default
 spec:
   replicas: 2
