--- a/k8s/password-exchange.deployment.yaml
+++ b/k8s/password-exchange.deployment.yaml
@@ -4,7 +4,7 @@ metadata:
   labels:
     app: passwordexchange
     #todo: add version label
-  name: passwordexchange-deployment
+  name: passwordexchange-%{PHASE}-deployment
   namespace: default
 spec:
   replicas: 2
