only have one service and template it with bazel

--- a/k8s/BUILD
+++ b/k8s/BUILD
@@ -28,22 +28,12 @@ k8s_object(
     # image is substituted as a part of the resolution process.
 
     kind = "service",
+    substitutions = {
+      "%{PHASE}": "{PHASE}",
 
+    },
     # A template of a Kubernetes Deployment object yaml.
     template = ":password-exchange.service.yaml",
-)
-k8s_object(
-    name = "password-dev-service",
-    cluster = "cluster.local",
-
-    # An optional collection of docker_build images to publish
-    # when this target is bazel run.  The digest of the published
-    # image is substituted as a part of the resolution process.
-
-    kind = "service",
-
-    # A template of a Kubernetes Deployment object yaml.
-    template = ":password-exchange-dev.service.yaml",
 )
 
 k8s_object(
@@ -70,25 +60,16 @@ k8s_object(
     # An optional collection of docker_build images to publish
     # when this target is bazel run.  The digest of the published
     # image is substituted as a part of the resolution process.
+    substitutions = {
+      "%{PHASE}": "{PHASE}",
 
+    },
     kind = "service",
 
     # A template of a Kubernetes Deployment object yaml.
     template = ":encryption.service.yaml",
 )
-k8s_object(
-    name = "encryption-dev-service",
-    cluster = "cluster.local",
-    
-    # An optional collection of docker_build images to publish
-    # when this target is bazel run.  The digest of the published
-    # image is substituted as a part of the resolution process.
 
-    kind = "service",
-
-    # A template of a Kubernetes Deployment object yaml.
-    template = ":encryption-dev.service.yaml",
-)
 k8s_object(
     name = "database",
     cluster = "cluster.local",
@@ -117,23 +98,14 @@ k8s_object(
     # image is substituted as a part of the resolution process.
 
     kind = "service",
+    substitutions = {
+      "%{PHASE}": "{PHASE}",
 
+    },
     # A template of a Kubernetes Deployment object yaml.
     template = ":database.service.yaml",
 )
-k8s_object(
-    name = "database-dev-service",
-    cluster = "cluster.local",
 
-    # An optional collection of docker_build images to publish
-    # when this target is bazel run.  The digest of the published
-    # image is substituted as a part of the resolution process.
-
-    kind = "service",
-
-    # A template of a Kubernetes Deployment object yaml.
-    template = ":database-dev.service.yaml",
-)
 k8s_object(
     name = "slackbot",
     cluster = "cluster.local",
@@ -187,15 +159,6 @@ k8s_objects(
     ]
 )
 
-k8s_objects(
-    name = "dev-services",
-    objects = [
-        ":password-dev-service",
-        ":slackbot-service",
-        ":encryption-dev-service",
-        ":database-dev-service",
-    ]
-)
 
 k8s_objects(
     name = "deployments-and-services",
@@ -205,10 +168,3 @@ k8s_objects(
     ]
 )
 
-k8s_objects(
-    name = "dev-deployments-and-services",
-    objects = [
-        ":deployments",
-        ":dev-services",
-    ]
-)
