--- a/k8s/database.service.yaml
+++ b/k8s/database.service.yaml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: database-service 
+  name: database-%{PHASE}-service 
   annotations:
   namespace: default
 spec:
   selector:
     app: database
-    phase: PROD
+    phase: %{PHASE}
   ports:
     - name: grpc 
       port: 50051 
