--- a/k8s/encryption.service.yaml
+++ b/k8s/encryption.service.yaml
@@ -1,14 +1,14 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: encryption-service 
+  name: encryption-%{PHASE}-service 
   annotations:
     # external-dns.alpha.kubernetes.io/hostname: anthony.bible
   namespace: default
 spec:
   selector:
     app: encryption 
-    phase: PROD
+    phase: %{PHASE}
   ports:
     - name: grpc 
       port: 50051 
