--- a/k8s/password-exchange.service.yaml
+++ b/k8s/password-exchange.service.yaml
@@ -1,14 +1,14 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: passwordexchange-service 
+  name: passwordexchange-%{PHASE}-service 
   annotations:
     # external-dns.alpha.kubernetes.io/hostname: anthony.bible
   namespace: default
 spec:
   selector:
     app: passwordexchange 
-    phase: PROD
+    phase: %{PHASE}
   ports:
     - name: http
       port: 80
