--- a/.github/workflows/bazel-build.yml
+++ b/.github/workflows/bazel-build.yml
@@ -31,6 +31,9 @@ jobs:
       - name: Build the code
         run: bazel build //... 
       - name: Render manifests
+        if: |
+          github.ref == 'refs/heads/master' || startsWith(github.ref, 'refs/tags/v')
+
         run: | 
           mkdir build
           git clone https://github.com/Anthony-Bible/password-exchange-deploy.git ./build
