some cleanup and allow seperate services for each prod and dev

--- a/k8s/database.deployment.yaml
+++ b/k8s/database.deployment.yaml
@@ -27,5 +27,8 @@ spec:
         - secretRef:
             name: test-secret
         image: ghcr.io/anthony-bible/passwordexchange-database
+        env:
+        - name: "PASSWORDEXCHANGE_RUNNING_ENVIRONMENT"
+          value: "%{PHASE}"
         name: database
 
