--- a/k8s/encryption.deployment.yaml
+++ b/k8s/encryption.deployment.yaml
@@ -25,6 +25,9 @@ spec:
         - secretRef:
             name: test-secret
         image: ghcr.io/anthony-bible/passwordexchange-encryption
+        env:
+        - name: "PASSWORDEXCHANGE_RUNNING_ENVIRONMENT"
+          value: "%{PHASE}"
         name: encryption
 
 ---
