--- a/k8s/password-exchange.deployment.yaml
+++ b/k8s/password-exchange.deployment.yaml
@@ -26,6 +26,9 @@ spec:
         - secretRef:
             name: test-secret
         image: ghcr.io/anthony-bible/passwordexchange-container-prod
+        env:
+        - name: "PASSWORDEXCHANGE_RUNNING_ENVIRONMENT"
+          value: "%{PHASE}"
         name: password-exchange
         ports:
         - containerPort: 8080
