--- a/.github/workflows/bazel-build.yml
+++ b/.github/workflows/bazel-build.yml
@@ -5,8 +5,8 @@ on: [push, pull_request]
 jobs:
   test:
     # virtual environments: https://github.com/actions/virtual-environments
-    runs-on: ubuntu-20.04
-
+    # runs-on: ubuntu-20.04
+    runs-on: self-hosted
     steps:         
       # Checks-out your repository under $GITHUB_WORKSPACE, which is the CWD for
       # the rest of the steps
