turn on dependency dashboard

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,5 +1,9 @@
 {
     "kubernetes": {
       "fileMatch": ["kubernetes/.+\\.yaml$"]
-    }
+    },
+    {
+  "extends": ["config:base", ":dependencyDashboard"]
+}
+
   }
