more fixes to renovate

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -2,7 +2,5 @@
     "kubernetes": {
       "fileMatch": ["kubernetes/.+\\.yaml$"]
     },
-  "    extends": ["config:base", ":dependencyDashboard"]
-    
-
+    "dependencyDashboard": true
   }
