--- a/app/cmd/email/BUILD.bazel
+++ b/app/cmd/email/BUILD.bazel
@@ -7,12 +7,16 @@ go_library(
         "recieve.go",
         "send.go",
     ],
-    importpath = "github.com/Anthony-Bible/password-exchange/app/email",
+    importpath = "github.com/Anthony-Bible/password-exchange/app/cmd/email",
     visibility = ["//visibility:public"],
     deps = [
-        "//app/message",
-        "@com_github_rabbitmq_amqp091_go//:go_default_library",
+        "//app/cmd",
+        "//app/config",
+        "//app/protos:messagepb_go_proto",
+        "@com_github_golang_protobuf//proto:go_default_library",
+        "@com_github_rabbitmq_amqp091_go//:amqp091-go",
         "@com_github_rs_zerolog//log",
+        "@com_github_spf13_cobra//:go_default_library",
         "@com_github_spf13_viper//:viper",
     ],
 )
